# generic_to_string

./: .clang-format  .gitignore  CMakeLists.txt  generic_to_string.hpp  get_demangled_name.hpp  get_enum_name.hpp  get_type_name.hpp  readme.md  temp.cpp  test.cpp  to_str.hpp
.cache/clangd/index/: generic_to_string.hpp.4152251F0551F5C4.idx  get_demangled_name.hpp.AE56985852A829AC.idx  get_enum_name.hpp.535B4D88C12E22BE.idx  get_type_name.hpp.AD363C2EEB83B7E9.idx  test_any.cpp.5E3E36B13F346219.idx  test_container.cpp.EA90AB3BFB661635.idx  test_container_adaptor.cpp.98C2A575D67B8FA1.idx  test_costom.cpp.74BF24E1ECED83F4.idx  test_enum.cpp.55BC25604DD84028.idx  test_istream.cpp.840F2B15ED4EB85F.idx  test_iterator.cpp.9E8321E5CA859BC7.idx  test_map.cpp.9611826CC1B1FA0A.idx  test_multithread.cpp.C3752B7B2E45E39F.idx  test_number.cpp.6C9A226EA7FD93E0.idx  test_optional.cpp.6F41C3F530E2735D.idx  test_pointer.cpp.52DA2FDCF5080650.idx  test_self.cpp.9FEF3E38E97729D4.idx  test_set.cpp.8A6C8089E355132A.idx  test_time.cpp.F4F38FE4F5309982.idx  test_tuple.cpp.D5F426E84AC88A2C.idx  test_variant.cpp.0E0E8A92C7636DD2.idx  to_str.hpp.1E0DDCAD6898B439.idx
output/: temp
test/: CMakeLists.txt  test  test_any.cpp  test_container.cpp  test_container_adaptor.cpp  test_costom.cpp  test_enum.cpp  test_istream.cpp  test_iterator.cpp  test_map.cpp  test_multithread.cpp  test_number.cpp  test_optional.cpp  test_pointer.cpp  test_self.cpp  test_set.cpp  test_smartpointer.cpp  test_sout.cpp  test_time.cpp  test_tuple.cpp  test_user_class.cpp  test_variant.cpp
test/output/: test_number
